# biodivine-sketchbook

./: .eslintrc.yml  .gitignore  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json  run_performance_eval.py  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/algorithms/: mod.rs
src-tauri/src/algorithms/_aeon_algorithms/: algo_xie_beerel.rs  compute_attractors.rs  mod.rs
src-tauri/src/algorithms/eval_dynamic/: _fixed_points.rs  _trajectory.rs  _trap_spaces.rs  encode.rs  eval.rs  mod.rs  prepare_graph.rs  processed_props.rs  saturated_reachability.rs  template_eval.rs  utils.rs
src-tauri/src/algorithms/eval_static/: encode.rs  eval.rs  mod.rs  prepare_graph.rs  processed_props.rs  template_eval.rs
src-tauri/src/algorithms/fo_logic/: eval_algorithm.rs  eval_operators.rs  eval_wrappers.rs  evaluator.rs  fol_tree.rs  mod.rs  operator_enums.rs  parser.rs  tokenizer.rs  utils.rs
src-tauri/src/analysis/: analysis_results.rs  analysis_state.rs  analysis_type.rs  context_utils.rs  inference_results.rs  inference_solver.rs  inference_type.rs  mod.rs  results_export.rs  sampling_networks.rs  update_fn_details.rs
src-tauri/src/analysis/_test_inference/: _test_dynamic.rs  _test_no_properties.rs  _test_static.rs  utils.rs
src-tauri/src/analysis/data_structs/: mod.rs
src-tauri/src/app/: _aeon_app.rs  _aeon_error.rs  _undo_stack.rs  event.rs  event_wrappers.rs  mod.rs
src-tauri/src/app/state/: _consumed.rs  _state_app.rs  _state_atomic.rs  _state_map.rs  _undo_stack.rs  mod.rs
src-tauri/src/gui/: events.rs  mod.rs  undo_stack.rs  window_context.rs
src-tauri/src/inference/: candidate_sampling.rs  inference_results.rs  inference_solver.rs  inference_state.rs  inference_status.rs  mod.rs  refine_regulations.rs  results_export.rs  sampling_data.rs  update_fn_details.rs
src-tauri/src/inference/_test_inference/: _test_dynamic.rs  _test_no_properties.rs  _test_static.rs  mod.rs  utils.rs
src-tauri/src/sketchbook/: _binary_op.rs  _essentiality.rs  _function_tree.rs  _identifier.rs  _impl_identifier.rs  _impl_regulation.rs  _impl_var_id.rs  _impl_variable.rs  _monotonicity.rs  _observability.rs  _parameter.rs  _parameter_id.rs  _regulation.rs  _regulation_sign.rs  _simplified_structs.rs  _uninterpreted_fn.rs  _uninterpreted_fn_arg.rs  _uninterpreted_fn_id.rs  _update_function.rs  _var_id.rs  _variable.rs  bn_utils.rs  event_utils.rs  ids.rs  mod.rs  sketch.rs  stat_prop_utils.rs  utils.rs
src-tauri/src/sketchbook/_identifiers/: _base_id.rs  _identifier.rs  mod.rs
src-tauri/src/sketchbook/_impl_regulations_state/: _impl_id_generating.rs  _impl_mutator_methods.rs  _impl_observer_methods.rs  _impl_other_traits.rs  _impl_reg_graph_conversion.rs  _impl_serde.rs  mod.rs
src-tauri/src/sketchbook/_model/: _impl_convert_bn.rs  _impl_convert_reg_graph.rs  _impl_editing.rs  _impl_id_generating.rs  _impl_observing.rs  _impl_serde.rs  _impl_session_state.rs  mod.rs
src-tauri/src/sketchbook/_model_state/: _impl_editing.rs  _impl_id_generating.rs  _impl_observing.rs  _impl_other_traits.rs  _impl_reg_graph_conversion.rs  _impl_serde.rs  _impl_session_state.rs  mod.rs
src-tauri/src/sketchbook/_regulations_state/: _impl_editing.rs  _impl_id_generating.rs  _impl_observing.rs  _impl_other_traits.rs  _impl_reg_graph_conversion.rs  _impl_session_state.rs  mod.rs
src-tauri/src/sketchbook/_sketch/: _impl_consistency.rs  _impl_export.rs  _impl_import.rs  _impl_session_state.rs  _impl_sketch.rs  mod.rs
src-tauri/src/sketchbook/_tests_events/: _model.rs  _observations.rs  mod.rs
src-tauri/src/sketchbook/data_structs/: _dataset_data.rs  mod.rs  (+14 more)
(+540 files in other folders)
