[package]
name = "aeon-sketchbook"
version = "0.1.0"
description = "A multi-platform application for designing and analysing large-scale logical models."
authors = ["Ondrej Huvar <xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>", "Petr Ivicic"]
license = "MIT"
repository = "https://github.com/sybila/biodivine-aeon-sketchbook"
edition = "2021"
readme = "README.md"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
biodivine-lib-bdd = ">=0.5.19, <1.0.0"
biodivine-lib-param-bn = ">=0.5.11, <1.0.0"
biodivine-hctl-model-checker = ">=0.3.0, <1.0.0"
chrono = "0.4.38"
csv = "1.3"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["dialog-all", "os-all", "path-all", "shell-open", "window-close", "window-create", "window-set-focus", "window-set-size"] }
tokio = { version = "1.40.0", features = ["sync"] }
zip = "0.6.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
