[package]
name = "biodivine-sketchbook"
version = "0.1.2"
description = "A multi-platform application for designing and analysing large-scale logical models."
authors = ["Ondrej Huvar <xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>", "Petr Ivicic"]
license = "MIT"
repository = "https://github.com/sybila/biodivine-sketchbook"
edition = "2021"
readme = "README.md"
default-run = "biodivine-sketchbook"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "run-inference"
path = "src/bin/run_inference.rs"

[[bin]]
name = "biodivine-sketchbook"
path = "src/main.rs"

[dependencies]
biodivine-lib-bdd = ">=0.5.22, <1.0.0"
biodivine-lib-param-bn = ">=0.5.13, <1.0.0"
biodivine-hctl-model-checker = ">=0.3.2, <1.0.0"
chrono = "0.4.38"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.3"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["dialog-all", "os-all", "path-all", "shell-open", "window-close", "window-create", "window-set-focus", "window-set-size"] }
tokio = { version = "1.40.0", features = ["sync"] }
zip = "0.6.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
